--- a/examples/elevator_types.yaml
+++ b/examples/elevator_types.yaml
@@ -1,15 +1,9 @@
 Domain Types:
   Level Name:
-    inherits: String
-    constraints:
-      regex: '^[A-Za-z0-9][A-Za-z0-9]{0,25}$'
+    inherits: [String, '^[A-Za-z0-9][A-Za-z0-9]{0,25}$']
 
   Distance:
-    inherits: Rational
-    constraints:
-      range:
-        min: 0
-        max: max
+    inherits: [Rational, 0, max]
     units: m
 
   Building Name:
@@ -23,37 +17,24 @@ Domain Types:
     units: m/s
 
   Duration:
-    inherits: Rational
-    constraints:
-      range:
-        min: 0
-        max: max
+    inherits: [Rational, 0, max]
     units: s
 
   Direction:
-    inherits: Boolean
-    constraints:
-      symbol pair: [up, down]
+    inherits: Boolean, [up, down]
 
 Utility Types:
 
   Name:
-    inherits: String
-    constraints:
-      regex: '^[A-Za-z0-9][A-Za-z0-9 ]{0,25}$'
+    inherits: [String, '^[A-Za-z0-9][A-Za-z0-9 ]{0,25}$']
 
   Counter:
-    inherits: Integer
-    constraints:
-      range:
-        min: 0
-        max: max
+    inherits: [Integer, [0, max] ]
     operators:
       new:
         - inc
         - dec
         - reset
-
 
 Base Types:
   String:
